<?xml version="1.0" encoding="utf-8"?>
<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ui_movie_display_fragment"
    android:name="com.javadude.moviesnav.UIMovieDisplay"
    tools:layout="@layout/ui_movie_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>